--- a/html/login.html
+++ b/html/login.html
@@ -10,7 +10,7 @@
 
 <div class="main">
 
-    <h1 id="title1">EksamensQuiz!</h1>
+    <h1 id="title1">GetBartender!</h1>
 
 
 
@@ -22,16 +22,6 @@
         </div>
 
 </div>
-
-
-
-
-
-
-
-
-
-
 
 
 
